replace `.collect(Collectors.toList())` with `.toList()` to appease SonarQube