@@ -7,7 +7,6 @@ import io.kadai.adapter.systemconnector.camunda.api.impl.HttpHeaderProvider;
 import io.kadai.adapter.systemconnector.camunda.config.Camunda7System;
 import io.kadai.adapter.systemconnector.camunda.config.health.Camunda7HealthConfigurationProperties;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
@@ -61,8 +60,7 @@ class Camunda7SystemHealthCompositeTest {
     long count = composite.stream().count();
     assertThat(count).isEqualTo(2);
 
-    List<String> contributorNames =
-        composite.stream().map(Entry::name).collect(Collectors.toList());
+    List<String> contributorNames = composite.stream().map(Entry::name).toList();
 
     assertThat(contributorNames).containsExactly("camundaSystem1", "camundaSystem2");
   }
@@ -70,7 +68,8 @@ class Camunda7SystemHealthCompositeTest {
   @Test
   void should_NameHealthContributorsAfterTheirCamundaEngineIdentifier() {
     Camunda7System orders =
-        new Camunda7System("http://localhost:8080/engine", "http://localhost:8080/outbox", "orders");
+        new Camunda7System(
+            "http://localhost:8080/engine", "http://localhost:8080/outbox", "orders");
     Camunda7System invoices =
         new Camunda7System(
             "http://localhost:8081/engine", "http://localhost:8081/outbox", "invoices");
@@ -82,8 +81,7 @@ class Camunda7SystemHealthCompositeTest {
             new Camunda7HealthConfigurationProperties(),
             mock(HttpHeaderProvider.class));
 
-    List<String> contributorNames =
-        composite.stream().map(Entry::name).collect(Collectors.toList());
+    List<String> contributorNames = composite.stream().map(Entry::name).toList();
 
     assertThat(contributorNames).containsExactly("orders", "invoices");
   }
@@ -91,9 +89,11 @@ class Camunda7SystemHealthCompositeTest {
   @Test
   void should_UseDistinctNamesForDuplicateCamundaEngineIdentifiers() {
     Camunda7System firstDefault =
-        new Camunda7System("http://localhost:8080/engine", "http://localhost:8080/outbox", "default");
+        new Camunda7System(
+            "http://localhost:8080/engine", "http://localhost:8080/outbox", "default");
     Camunda7System secondDefault =
-        new Camunda7System("http://localhost:8081/engine", "http://localhost:8081/outbox", "default");
+        new Camunda7System(
+            "http://localhost:8081/engine", "http://localhost:8081/outbox", "default");
 
     Camunda7SystemsHealthComposite composite =
         new Camunda7SystemsHealthComposite(
@@ -102,8 +102,7 @@ class Camunda7SystemHealthCompositeTest {
             new Camunda7HealthConfigurationProperties(),
             mock(HttpHeaderProvider.class));
 
-    List<String> contributorNames =
-        composite.stream().map(Entry::name).collect(Collectors.toList());
+    List<String> contributorNames = composite.stream().map(Entry::name).toList();
 
     assertThat(contributorNames).containsExactly("default", "default-2");
   }
